--- a/src/features/ui/wrapper/wrapper.scss
+++ b/src/features/ui/wrapper/wrapper.scss
@@ -1,7 +1,6 @@
 @use '../../../style/abstracts/constants' as vars;
 
 :where(.wrapper) {
-  max-width: vars.$content-width;
   margin: 0 auto;
   padding: 0 20px;
 }
